--- a/src/main/webapp/managerReport.html
+++ b/src/main/webapp/managerReport.html
@@ -306,34 +306,34 @@
         <p class="td" id="agreementUnit3lastYearDay"></p>
         <p class="td" id="agreementUnit3insertRial"></p>
     </div>
-   <!-- <div class="tr">
-        <p class="td">中介</p>
-        <p class="td" id="intermediary3day"></p>
-        <p class="td" id="intermediary3month"></p>
-        <p class="td" id="intermediary3lastMonthDay"></p>
-        <p class="td" id="intermediary3year"></p>
-        <p class="td" id="intermediary3lastYearDay"></p>
-        <p class="td" id="intermediary3insertRial"></p>
-    </div>
+    <!-- <div class="tr">
+         <p class="td">中介</p>
+         <p class="td" id="intermediary3day"></p>
+         <p class="td" id="intermediary3month"></p>
+         <p class="td" id="intermediary3lastMonthDay"></p>
+         <p class="td" id="intermediary3year"></p>
+         <p class="td" id="intermediary3lastYearDay"></p>
+         <p class="td" id="intermediary3insertRial"></p>
+     </div>
 
-    <div class="tr">
-        <p class="td">app</p>
-        <p class="td" id="app3day"></p>
-        <p class="td" id="app3month"></p>
-        <p class="td" id="app3lastMonthDay"></p>
-        <p class="td" id="app3year"></p>
-        <p class="td" id="app3lastYearDay"></p>
-        <p class="td" id="app3insertRial"></p>
-    </div>
-    <div class="tr">
-        <p class="td">微信</p>
-        <p class="td" id="microLetter3day"></p>
-        <p class="td" id="microLetter3month"></p>
-        <p class="td" id="microLetter3lastMonthDay"></p>
-        <p class="td" id="microLetter3year"></p>
-        <p class="td" id="microLetter3lastYearDay"></p>
-        <p class="td" id="microLetter3insertRial"></p>
-    </div>-->
+     <div class="tr">
+         <p class="td">app</p>
+         <p class="td" id="app3day"></p>
+         <p class="td" id="app3month"></p>
+         <p class="td" id="app3lastMonthDay"></p>
+         <p class="td" id="app3year"></p>
+         <p class="td" id="app3lastYearDay"></p>
+         <p class="td" id="app3insertRial"></p>
+     </div>
+     <div class="tr">
+         <p class="td">微信</p>
+         <p class="td" id="microLetter3day"></p>
+         <p class="td" id="microLetter3month"></p>
+         <p class="td" id="microLetter3lastMonthDay"></p>
+         <p class="td" id="microLetter3year"></p>
+         <p class="td" id="microLetter3lastYearDay"></p>
+         <p class="td" id="microLetter3insertRial"></p>
+     </div>-->
     <div class="tr">
         <p class="td">直接入住</p>
         <p class="td" id="enter3day"></p>
@@ -396,34 +396,34 @@
         <p class="td" id="agreementUnit4lastYearDay"></p>
         <p class="td" id="agreementUnit4insertRial"></p>
     </div>
-   <!-- <div class="tr">
-        <p class="td">中介</p>
-        <p class="td" id="intermediary4day"></p>
-        <p class="td" id="intermediary4month"></p>
-        <p class="td" id="intermediary4lastMonthDay"></p>
-        <p class="td" id="intermediary4year"></p>
-        <p class="td" id="intermediary4lastYearDay"></p>
-        <p class="td" id="intermediary4insertRial"></p>
-    </div>
+    <!-- <div class="tr">
+         <p class="td">中介</p>
+         <p class="td" id="intermediary4day"></p>
+         <p class="td" id="intermediary4month"></p>
+         <p class="td" id="intermediary4lastMonthDay"></p>
+         <p class="td" id="intermediary4year"></p>
+         <p class="td" id="intermediary4lastYearDay"></p>
+         <p class="td" id="intermediary4insertRial"></p>
+     </div>
 
-    <div class="tr">
-        <p class="td">app</p>
-        <p class="td" id="app4day"></p>
-        <p class="td" id="app4month"></p>
-        <p class="td" id="app4lastMonthDay"></p>
-        <p class="td" id="app4year"></p>
-        <p class="td" id="app4lastYearDay"></p>
-        <p class="td" id="app4insertRial"></p>
-    </div>
-    <div class="tr">
-        <p class="td">微信</p>
-        <p class="td" id="microLetter4day"></p>
-        <p class="td" id="microLetter4month"></p>
-        <p class="td" id="microLetter4lastMonthDay"></p>
-        <p class="td" id="microLetter4year"></p>
-        <p class="td" id="microLetter4lastYearDay"></p>
-        <p class="td" id="microLetter4insertRial"></p>
-    </div>-->
+     <div class="tr">
+         <p class="td">app</p>
+         <p class="td" id="app4day"></p>
+         <p class="td" id="app4month"></p>
+         <p class="td" id="app4lastMonthDay"></p>
+         <p class="td" id="app4year"></p>
+         <p class="td" id="app4lastYearDay"></p>
+         <p class="td" id="app4insertRial"></p>
+     </div>
+     <div class="tr">
+         <p class="td">微信</p>
+         <p class="td" id="microLetter4day"></p>
+         <p class="td" id="microLetter4month"></p>
+         <p class="td" id="microLetter4lastMonthDay"></p>
+         <p class="td" id="microLetter4year"></p>
+         <p class="td" id="microLetter4lastYearDay"></p>
+         <p class="td" id="microLetter4insertRial"></p>
+     </div>-->
     <div class="tr">
         <p class="td">直接入住</p>
         <p class="td" id="enter4day"></p>
@@ -486,34 +486,34 @@
         <p class="td" id="agreementUnit5lastYearDay"></p>
         <p class="td" id="agreementUnit5insertRial"></p>
     </div>
-  <!--  <div class="tr">
-        <p class="td">中介</p>
-        <p class="td" id="intermediary5day"></p>
-        <p class="td" id="intermediary5month"></p>
-        <p class="td" id="intermediary5lastMonthDay"></p>
-        <p class="td" id="intermediary5year"></p>
-        <p class="td" id="intermediary5lastYearDay"></p>
-        <p class="td" id="intermediary5insertRial"></p>
-    </div>
+    <!--  <div class="tr">
+          <p class="td">中介</p>
+          <p class="td" id="intermediary5day"></p>
+          <p class="td" id="intermediary5month"></p>
+          <p class="td" id="intermediary5lastMonthDay"></p>
+          <p class="td" id="intermediary5year"></p>
+          <p class="td" id="intermediary5lastYearDay"></p>
+          <p class="td" id="intermediary5insertRial"></p>
+      </div>
 
-    <div class="tr">
-        <p class="td">app</p>
-        <p class="td" id="app5day"></p>
-        <p class="td" id="app5month"></p>
-        <p class="td" id="app5lastMonthDay"></p>
-        <p class="td" id="app5year"></p>
-        <p class="td" id="app5lastYearDay"></p>
-        <p class="td" id="app5insertRial"></p>
-    </div>
-    <div class="tr">
-        <p class="td">微信</p>
-        <p class="td" id="microLetter5day"></p>
-        <p class="td" id="microLetter5month"></p>
-        <p class="td" id="microLetter5lastMonthDay"></p>
-        <p class="td" id="microLetter5year"></p>
-        <p class="td" id="microLetter5lastYearDay"></p>
-        <p class="td" id="microLetter5insertRial"></p>
-    </div>-->
+      <div class="tr">
+          <p class="td">app</p>
+          <p class="td" id="app5day"></p>
+          <p class="td" id="app5month"></p>
+          <p class="td" id="app5lastMonthDay"></p>
+          <p class="td" id="app5year"></p>
+          <p class="td" id="app5lastYearDay"></p>
+          <p class="td" id="app5insertRial"></p>
+      </div>
+      <div class="tr">
+          <p class="td">微信</p>
+          <p class="td" id="microLetter5day"></p>
+          <p class="td" id="microLetter5month"></p>
+          <p class="td" id="microLetter5lastMonthDay"></p>
+          <p class="td" id="microLetter5year"></p>
+          <p class="td" id="microLetter5lastYearDay"></p>
+          <p class="td" id="microLetter5insertRial"></p>
+      </div>-->
     <div class="tr">
         <p class="td">直接入住</p>
         <p class="td" id="enter5day"></p>
@@ -577,34 +577,34 @@
         <p class="td" id="agreementUnit6lastYearDay"></p>
         <p class="td" id="agreementUnit6insertRial"></p>
     </div>
-   <!-- <div class="tr">
-        <p class="td">中介</p>
-        <p class="td" id="intermediary6day"></p>
-        <p class="td" id="intermediary6month"></p>
-        <p class="td" id="intermediary6lastMonthDay"></p>
-        <p class="td" id="intermediary6year"></p>
-        <p class="td" id="intermediary6lastYearDay"></p>
-        <p class="td" id="intermediary6insertRial"></p>
-    </div>
+    <!-- <div class="tr">
+         <p class="td">中介</p>
+         <p class="td" id="intermediary6day"></p>
+         <p class="td" id="intermediary6month"></p>
+         <p class="td" id="intermediary6lastMonthDay"></p>
+         <p class="td" id="intermediary6year"></p>
+         <p class="td" id="intermediary6lastYearDay"></p>
+         <p class="td" id="intermediary6insertRial"></p>
+     </div>
 
-    <div class="tr">
-        <p class="td">app</p>
-        <p class="td" id="app6day"></p>
-        <p class="td" id="app6month"></p>
-        <p class="td" id="app6lastMonthDay"></p>
-        <p class="td" id="app6year"></p>
-        <p class="td" id="app6lastYearDay"></p>
-        <p class="td" id="app6insertRial"></p>
-    </div>
-    <div class="tr">
-        <p class="td">微信</p>
-        <p class="td" id="microLetter6day"></p>
-        <p class="td" id="microLetter6month"></p>
-        <p class="td" id="microLetter6lastMonthDay"></p>
-        <p class="td" id="microLetter6year"></p>
-        <p class="td" id="microLetter6lastYearDay"></p>
-        <p class="td" id="microLetter6insertRial"></p>
-    </div>-->
+     <div class="tr">
+         <p class="td">app</p>
+         <p class="td" id="app6day"></p>
+         <p class="td" id="app6month"></p>
+         <p class="td" id="app6lastMonthDay"></p>
+         <p class="td" id="app6year"></p>
+         <p class="td" id="app6lastYearDay"></p>
+         <p class="td" id="app6insertRial"></p>
+     </div>
+     <div class="tr">
+         <p class="td">微信</p>
+         <p class="td" id="microLetter6day"></p>
+         <p class="td" id="microLetter6month"></p>
+         <p class="td" id="microLetter6lastMonthDay"></p>
+         <p class="td" id="microLetter6year"></p>
+         <p class="td" id="microLetter6lastYearDay"></p>
+         <p class="td" id="microLetter6insertRial"></p>
+     </div>-->
     <div class="tr">
         <p class="td">直接入住</p>
         <p class="td" id="enter6day"></p>
@@ -637,7 +637,7 @@
 <script>
     layui.use(['table', 'element', 'form', 'laydate'], function () {
         var table = layui.table, $ = layui.$, form = layui.form, state = 0, laydate = layui.laydate;
-        var today = DateToLStr(new Date(Date.now() - 86400000)).split(" ")[0];
+        var today = DateToLStr(new Date(Date.now() - 86400000)).split(" ")[0], endTime = '';
         $("#startTime").val(today);
         setTimeout(function () {
             resultInfo()
@@ -652,7 +652,7 @@
         //获取
         function resultInfo() {
             var obj = {
-                endTime: $("#startTime").val() + " 04:00:00"
+                endTime: endTime ? endTime : DateToLStr3(new Date(new Date(today).getTime() + (24 * 60 * 60 * 1000))) + ' 04:00:00'
             };
             var index = layer.load(1, {time: 10 * 1000});
             $.ajax({
@@ -725,7 +725,8 @@
             max: 0,
             format: 'yyyy/MM/dd',
             done: function (value, date) {
-
+                var valueDate = new Date(value).getTime() + (24 * 60 * 60 * 1000);
+                endTime = DateToLStr3(new Date(valueDate)) + " 04:00:00"
             }
         });
     });
