--- a/src/main/webapp/managerReport.html
+++ b/src/main/webapp/managerReport.html
@@ -652,7 +652,7 @@
         //获取
         function resultInfo() {
             var obj = {
-                endTime: endTime ? endTime : DateToLStr3(new Date(new Date(today).getTime() + (24 * 60 * 60 * 1000))) + ' 04:00:00'
+                endTime: endTime ? endTime : today
             };
             var index = layer.load(1, {time: 10 * 1000});
             $.ajax({
@@ -725,8 +725,7 @@
             max: 0,
             format: 'yyyy/MM/dd',
             done: function (value, date) {
-                var valueDate = new Date(value).getTime() + (24 * 60 * 60 * 1000);
-                endTime = DateToLStr3(new Date(valueDate)) + " 04:00:00"
+                endTime = value;
             }
         });
     });
