--- a/src/main/webapp/iframe_admin.html
+++ b/src/main/webapp/iframe_admin.html
@@ -78,9 +78,9 @@
                 if (!data.field.password) {
                     delete data.field.password;
                 } else {
-                    if (/^[\S]{6,12}$/.test(data.field.password)) {
+                    if (!/^[\S]{6,12}$/.test(data.field.password)) {
                         showMsg('密码必须6到12位，且不能出现空格', 2, false);
-                        return;
+                        return false;
                     }
                 }
                 data.field.id = adminData.id;
@@ -98,9 +98,9 @@
                     }
                 });
             } else {//添加
-                if (/^[\S]{6,12}$/.test(data.field.password)) {
+                if (!/^[\S]{6,12}$/.test(data.field.password)) {
                     showMsg('密码必须6到12位，且不能出现空格', 2, false);
-                    return;
+                    return false;
                 }
                 $.ajax({
                     url: api.addAdmin,
