--- a/src/main/webapp/pre-check-out-report.html
+++ b/src/main/webapp/pre-check-out-report.html
@@ -32,7 +32,7 @@
 <div style="height: 70px;"></div>
 <form class="layui-form" style="padding-top: 10px">
     <div class="layui-form-item">
-        <label class="layui-form-label">起止时间</label>
+        <label class="layui-form-label">离店时间</label>
         <div class="layui-input-inline" style="width: 165px;">
             <input type="text" name="startTime" lay-verify="required" id="startTime" autocomplete="off"
                    class="layui-input inline-input"
