--- a/src/main/webapp/management_layer.html
+++ b/src/main/webapp/management_layer.html
@@ -53,9 +53,26 @@
 </div>
 <div style="color:#ff3400; width: 90%;margin: 20px auto;">
     <label>注：</label>
-    <div class="text">房晚数 = 夜核房晚数 + 新增房晚数</div>
+    <div class="text">应收合计 = 所有收入（包括商品交易、会员卡收入） - 冲减项</div>
+    <div class="text">平均房价 = 房租收入/房晚数</div>
+    <div class="text">房平均消费 = 房间所有总消费（应收合计-会员卡收入）/房晚数</div>
+    <div class="text">人均消费 = 应收合计/人晚数</div>
+    <div class="text">赔偿收入 = 赔偿收入-赔偿冲减</div>
+    <div class="text">免费入住房数 = 房晚数中的免费房数</div>
+    <div class="text">房间总数 = 所有展示的房间数</div>
+    <div class="text">维修房数 = 过夜审时的维修房数</div>
+    <div class="text">会员房数 = 会员入住的房数</div>
+    <div class="text">会员卡销售金额 = 会员卡收入</div>
+    <div class="text">房晚数 = 过夜审的房间数</div>
+    <div class="text">人晚数 = 过夜审入住的人数</div>
+    <div class="text">商品收入 = 总收入-商品冲减</div>
+    <div class="text">房费调整 = 超时费冲减项+房费冲减</div>
+    <div class="text">出租率 = 房晚数 / (总房间数 - 维修房数)</div>
     <div class="text">REVPAR = 应收合计 / (总房间数 - 维修房数)</div>
-    <div class="text">出租率 = 房晚数 / (总房间数 - 维修房数) * 100%</div>
+    <div class="text">停用房间数 = 锁房数</div>
+    <div class="text">房租收入 = 房费收入-房费冲减</div>
+    <div class="text">空房数 = 没有预约和入住的房间数</div>
+    <div class="text">钟点房晚数 = 房晚数中的钟点房数</div>
 </div>
 <script src="js/loadjs.js" type="text/javascript" charset="utf-8"></script>
 <script>
