--- a/src/main/webapp/room.html
+++ b/src/main/webapp/room.html
@@ -245,6 +245,10 @@
                         type: 'POST',
                         dataType: 'json',
                         success: function (data) {
+                            if(!data.success){
+                                layer.alter(data.errMsg);
+                                return;
+                            }
                             tab.reload();//刷新表格
                         }
                     });
@@ -298,6 +302,10 @@
                 type: 'POST',
                 dataType: 'json',
                 success: function (data) {
+                    if(!data.success){
+                        layer.alter(data.errMsg);
+                        return;
+                    }
                     tab.reload();//刷新表格
                 }
             })
