--- a/src/main/webapp/role.html
+++ b/src/main/webapp/role.html
@@ -151,6 +151,10 @@
                         type: 'POST',
                         dataType: 'json',
                         success: function (data) {
+                            if(!data.success){
+                                layer.alter(data.errMsg);
+                                return;
+                            }
                             tab.reload();//刷新表格
                         }
                     });
