页面： 新增会员卡解冻功能 移除更换酒店功能

--- a/src/main/webapp/checkIn.html
+++ b/src/main/webapp/checkIn.html
@@ -27,9 +27,9 @@
         <li class="layui-nav-item">
             <a href="javascript:;" id="hotelusername"></a>
             <dl class="layui-nav-child">
-                <dd>
-                    <a href="javascript:;" id="updateHotel">更换酒店</a>
-                </dd>
+                <!--<dd>-->
+                    <!--<a href="javascript:;" id="updateHotel">更换酒店</a>-->
+                <!--</dd>-->
                 <dd>
                     <a href="javascript:;" id="updatePass">修改密码</a>
                 </dd>
