--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -178,12 +178,14 @@
 			<div class="layadmin-user-login-box layadmin-user-login-body layui-form" lay-filter="example">
 				<div class="layui-form-item">
 					<label class="layadmin-user-login-icon layui-icon layui-icon-username" for="LAY-user-login-username"></label>
-					<input type="text" name="mobile" value="123456" id="LAY-user-login-username" lay-verify="required" placeholder="用户名"  autocomplete="off" class="layui-input">
+					<input type="text" name="mobile" value="" id="LAY-user-login-username" lay-verify="required" placeholder="用户名"  autocomplete="off" class="layui-input">
 				</div>
+
 				<div class="layui-form-item">
 					<label class="layadmin-user-login-icon layui-icon layui-icon-password" for="LAY-user-login-password"></label>
-					<input type="password" value="666666" name="password" id="LAY-user-login-password" lay-verify="pass" placeholder="密码"   autocomplete="off" class="layui-input">
+					<input type="password" value="" name="password" id="LAY-user-login-password" lay-verify="pass" placeholder="密码"   autocomplete="off" class="layui-input">
 				</div>
+
 				<div class="layui-form-item">
 					<select name="hotelId" lay-filter="hotel" id="hotel"></select>
 				</div>
