--- a/src/main/webapp/pre-check-out-report.html
+++ b/src/main/webapp/pre-check-out-report.html
@@ -16,9 +16,9 @@
         <li class="layui-nav-item">
             <a href="javascript:;" id="hotelusername"></a>
             <dl class="layui-nav-child">
-                <dd>
-                    <a href="javascript:;" id="updateHotel">更换酒店</a>
-                </dd>
+                <!--<dd>-->
+                    <!--<a href="javascript:;" id="updateHotel">更换酒店</a>-->
+                <!--</dd>-->
                 <dd>
                     <a href="javascript:;" id="updatePass">修改密码</a>
                 </dd>
@@ -54,8 +54,8 @@
 <script src="js/loadjs.js" type="text/javascript" charset="utf-8"></script>
 <script>
     layui.use(['element', 'form', 'laydate', 'jquery', 'layer', 'table'], function () {
-        var table = layui.table, $ = layui.$, form = layui.form, state = 0, title = '', laydate = layui.laydate
-            , startTime = 0, endTime = 0, date = new Date(), yesterday = DateToLStr3(date),
+        var table = layui.table, $ = layui.$, form = layui.form, laydate = layui.laydate
+            , date = new Date(), yesterday = DateToLStr3(date),
             today = DateToLStr3(new Date(date.getTime() - (24 * 60 * 60 * 1000)));
         laydate.render({
             elem: '#startTime',
@@ -128,9 +128,9 @@
             }
             , even: true
             , loading: true // 是否显示加载条
-            , title: title + '报表'
+            , title: '预离店报表'
             , done: function (res, curr, count) {
-                $(".layui-table-tool-temp").html('<p style="text-align: center">' + title + '报表</p>');
+                $(".layui-table-tool-temp").html('<p style="text-align: center">预离店报表</p>');
             }
             , toolbar: true
             , limit: 10000
