--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -143,7 +143,7 @@
             var maintain = $(this).data('maintain');//维修状态
             var dirty = $(this).data('dirty');//脏房状态状态
             if (!roomId || !roomNum || !roomTypeName) {
-                showMsg('网络错误，请刷新重试！');
+                showMsg('网络错误，请刷新重试！', 2, false);
             }
             clickItem(roomId, roomNum, roomTypeName, state, status, maintain, dirty);
         });
