--- a/src/main/webapp/iframe_home.html
+++ b/src/main/webapp/iframe_home.html
@@ -304,6 +304,12 @@
             } else{
                 $('#finish,#checkIn').removeClass('layui-btn-disabled').prop('disabled', '');
             }
+            //脏房不能入住
+            if(dirty === 'true'){
+                $('#checkIn').addClass('layui-btn-disabled').prop('disabled', 'disabled');
+            }else{
+                $('#checkIn').removeClass('layui-btn-disabled').prop('disabled', '');
+            }
 
             $.ajax({
                 url: api.homeRoomInfo,
@@ -567,7 +573,7 @@
                     url: api.cancelSubUpdate,
                     type: 'POST',
                     dataType: 'json',
-                    data: {orderChildId: JSON.stringify([reservationOrderId])},
+                    data: {orderChildIdS: reservationOrderId},
                     success: function (data) {
                         if (!data.success) {
                             showMsg(data.errMsg, 2, false);
