--- a/src/main/webapp/iframe_orderSettleAccounts.html
+++ b/src/main/webapp/iframe_orderSettleAccounts.html
@@ -222,8 +222,10 @@
             requestData.status = sessionData.status;
 
             //删除不用的数据
-            if (!requestData.integralReduction || !requestData.payType === 'stored') {
+            if (!requestData.integralReduction) {
                 delete requestData.integral;
+            }
+            if(!requestData.payType === 'stored'){
                 delete requestData.certificateNumber;
             }
             delete requestData.integralReduction;
