单项结账增加积分bug修复

--- a/src/main/webapp/member_info.html
+++ b/src/main/webapp/member_info.html
@@ -197,7 +197,7 @@
                                 }
                             },
                             {field: 'oddNumbers', title: '单号', align: 'center'},
-                            {field: 'presenterMoney', title: '赠送积分', align: 'center'},
+                           /* {field: 'presenterMoney', title: '赠送积分', align: 'center'},*/
                             {field: 'integralChange', title: '积分变动', align: 'center'},
                             {field: 'currentBalance', title: '剩余积分', align: 'center'},
                             {
